2005-09-11  Erik Hjortsberg  <erik@katastrof.nu>

	* media/materials/scripts/environment.material, media/materials/scripts/OffsetMapping.cg: if a parameter in a Cg program is not used, it's apparently removed from the function's prototype. fixed this
	* media/materials/scripts/vegetation.material: use  a high detail texture for the oak, since it makes such a big difference

2005-09-11  Erik Hjortsberg  <erik@katastrof.nu>

	* src/components/ogre/model/XMLModelDefinitionSerializer.cpp: removed preloading of all parsed meshes

2005-09-11  Erik Hjortsberg  <erik@katastrof.nu>

	* media/materials/scripts/environment.material: added new ground material and fixed a bug with the ploughed field

2005-09-11  Erik Hjortsberg  <erik@katastrof.nu>

	* make_dist_media.sh.in: some fixes to the media fetching
	* configfile: updated the location of the media

2005-09-11  Erik Hjortsberg  <erik@katastrof.nu>

	* src/components/ogre/ogreopcode/Makefile.am, src/components/ogre/ogreopcode/opcode/Makefile.am: don't install the .a libs
	* src/components/ogre/modeldefinitions/* updated the models

2005-09-11  Erik Hjortsberg  <erik@katastrof.nu>

	* src/components/ogre/EmberOgre.cpp
		* temporalily disable the sound service for now

2005-09-11  Erik Hjortsberg  <erik@katastrof.nu>

	* src/components/ogre/AvatarCamera.*
		* added console command setcameradistance, which allows the setting of the distance between the camera and the avatar
		* allow the avatar to be mouse picked

2005-09-11  Erik Hjortsberg  <erik@katastrof.nu>

	* src/components/ogre/widget/MeshPreview.*
		* added a simple gui for the mesh preview, it's possible to create new meshes, scale them and remove them

2005-09-11  Erik Hjortsberg  <erik@katastrof.nu>

	* src/components/ogre/widget/MakeEntityWidget.h: made buildWidget virtual

2005-09-11  Erik Hjortsberg  <erik@katastrof.nu>

	* src/components/ogre/widget/JesusEdit.h, src/components/ogre/widget/Widget.h: moved ConstWrapper to Widget
