@@ -1,5 +1,13 @@
 2005-09-11  Erik Hjortsberg  <erik@katastrof.nu>
 
+	* src/components/ogre/EmberEntity.cpp: update the debug entity bounding box when moving
+
+2005-09-11  Erik Hjortsberg  <erik@katastrof.nu>
+
+	*  media/materials/splatting/Splat.cg, src/components/ogre/TerrainPage.cpp: use the parameter tile to decide how much to tile the texture
+
+2005-09-11  Erik Hjortsberg  <erik@katastrof.nu>
+
 	* media/materials/scripts/environment.material, media/materials/scripts/OffsetMapping.cg: if a parameter in a Cg program is not used, it's apparently removed from the function's prototype. fixed this
 	* media/materials/scripts/vegetation.material: use  a high detail texture for the oak, since it makes such a big difference
 
